--- a/application/admin/view/box_music/edit.html
+++ b/application/admin/view/box_music/edit.html
@@ -90,7 +90,7 @@
                             <label class="col-sm-2 control-label">音乐上传</label>
                             <div class="col-sm-9">
                                     <dd class="upload_area clearfix" style="margin: 0 auto;">
-                                        <ul id="imglist" class="post_imglist">
+                                        <ul id="imglist" class="post_imglist2" style="float: left;">
                                             <li><a href="{$info.music_url}" class="music_css"><img class="wh60" id="file0" src="__STATIC__/images/music.jpg"></a></li>
                                         </ul>
                                         <div class="upload_btn" style="float: left">
