--- a/application/admin/view/box_music/add.html
+++ b/application/admin/view/box_music/add.html
@@ -25,11 +25,11 @@
                                 <input type="text" name="musician" value="" class="form-control">
                             </div>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group"> 
                             <label class="col-sm-2 control-label">音乐上传</label>
                             <div class="col-sm-9">
                                     <dd class="upload_area clearfix" style="margin: 0 auto;">
-                                        <ul id="imglist" class="post_imglist">
+                                        <ul id="imglist" class="post_imglist2" style="float: left;">
                                             <li><a href="" class="music_css"><img class="wh60" id="file0" src="__STATIC__/images/default.jpg"></a></li>
                                         </ul>
                                         <label for="file_apload" style="float: left"><div class="upload_btn"></div></label>
@@ -73,7 +73,7 @@
 <script src="__STATIC__/js/jquery.form.js" type="text/javascript"></script>
 <script type="text/javascript">
     //音乐上传
-    function music_upload(){
+    function music_upload(){ 
         $("#ajaxForm").ajaxSubmit(function (data) {
             // data = eval('('+data+')');
             if(data.status == 1){
