--- a/application/admin/view/sharing/add_music.html
+++ b/application/admin/view/sharing/add_music.html
@@ -20,6 +20,12 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-sm-2 control-label">描述</label>
+                            <div class="col-sm-9">
+                                <input type="text" name="desc" value="{$info.desc}" class="form-control">
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="col-sm-2 control-label">上级配乐</label>
                             <div class="col-sm-9">
                                 <div style="line-height:34px;float:left;margin:0 10px 0 0;width: 100%">
