--- a/application/admin/view/box/edit.html
+++ b/application/admin/view/box/edit.html
@@ -38,12 +38,12 @@
                                 <input type="text" name="scene_id" value="{$info.scene_name|default='未选择场景'}" class="form-control">
                             </div>
                         </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label class="col-sm-2 control-label ">视频</label>
                             <div class="col-sm-9">
                                 <input type="text" name="video_id" value="{$info.video_name|default='未选择视频'}" class="form-control">
                             </div>
-                        </div>
+                        </div> -->
                         <div class="form-group">
                             <label class="col-sm-2 control-label">照片</label>
                             <div class="col-sm-9">
