--- a/application/admin/view/box_cate/edit.html
+++ b/application/admin/view/box_cate/edit.html
@@ -47,7 +47,7 @@
                             </div>
                             <div class="form-group" style="margin-left:18%;">
                                 <label title="上传动图" for="pictur_btn2" class="btn btn-primary" id="pictur">上传动图
-                                    <input type="file" accept="image/jpg,image/jpeg,image/bmp,image/png,image/gif/*" name="file" id="pictur_btn2" class="hide" />
+                                    <input type="file" accept="image/jpg,image/jpeg,image/bmp,image/png,image/gif/*" name="file2" id="pictur_btn2" class="hide" />
                                 </label>
                             </div>
                         </div>
