--- a/application/admin/view/box/index.html
+++ b/application/admin/view/box/index.html
@@ -23,7 +23,7 @@
                             <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>类别 </th>
+                                <!-- <th>类别 </th> -->
                                 <th>制作人 </th>
                                 <!-- <th>发送的对象</th> -->
                                 <th>添加时间</th>
@@ -34,7 +34,7 @@
                             {volist name="list" id="vo"}
                             <tr>
                                 <td>{$vo.id}</td>
-                                <td>{$vo.name}</td>
+                                <!-- <td>{$vo.name}</td> -->
                                 <td>{$vo.u_nickname}</td>
                                 <td>{$vo.addtime|date="Y-m-d",###}</td>
                                 <td>
