--- a/application/admin/view/sharing/edit.html
+++ b/application/admin/view/sharing/edit.html
@@ -74,7 +74,7 @@
                                 {$info.forward_num}
                             </div>
                         </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                             <label class="col-sm-2 control-label">审核结果</label>
                             <div class="col-sm-9">
                                 <div class="radio radio-success radio-inline">
@@ -86,7 +86,7 @@
                                     <label for="show2">不通过</label>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
