--- a/application/admin/view/sharing/index.html
+++ b/application/admin/view/sharing/index.html
@@ -45,7 +45,7 @@
                                 <th>ID</th>
                                 <th>标题</th>
                                 <th>发布人</th>
-                                <th>状态</th>
+                                <!-- <th>状态</th> -->
                                 <th>点赞数</th>
                                 <th>排序</th>
                                 <th>是否推荐</th>
@@ -59,7 +59,7 @@
                                 <td>{$vo.id}</td>
                                 <td>{$vo.title}</td>
                                 <td>{$vo.nickname}</td>
-                                <td>{$vo.status_name}</td>
+                                <!-- <td>{$vo.status_name}</td> -->
                                 <td>{$vo.point_num}</td>
                                 <td>{$vo.sort}</td>
                                 <td align="left" axis="col0">
