--- a/application/admin/view/sharing/index.html
+++ b/application/admin/view/sharing/index.html
@@ -45,6 +45,7 @@
                                 <th>ID</th>
                                 <th>标题</th>
                                 <th>发布人</th>
+                                <th>类别</th>
                                 <!-- <th>状态</th> -->
                                 <th>点赞数</th>
                                 <th>排序</th>
@@ -59,6 +60,7 @@
                                 <td>{$vo.id}</td>
                                 <td>{$vo.title}</td>
                                 <td>{$vo.nickname}</td>
+                                <td>{if condition="$vo.type"}视频{else/}图文{/if}</td>
                                 <!-- <td>{$vo.status_name}</td> -->
                                 <td>{$vo.point_num}</td>
                                 <td>{$vo.sort}</td>
