--- a/application/admin/view/sharing/edit.html
+++ b/application/admin/view/sharing/edit.html
@@ -43,7 +43,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">封面图</label>
                             <div class="col-sm-9">
-                                <video src="{$info.cover}" style="max-width: 300px;max-height: 300px;"></video>
+                                <video src="{$info.cover}" controls="controls" style="max-width: 300px;max-height: 300px;"></video>
                                 <!-- <img src="{$info.cover}" style="max-height:100px;max-width:100px;" alt=""> -->
                             </div>
                         </div>
