--- a/application/admin/view/sharing/edit.html
+++ b/application/admin/view/sharing/edit.html
@@ -41,7 +41,7 @@
                             </div>
                         {else/}
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">封面图</label>
+                            <label class="col-sm-2 control-label">视频</label>
                             <div class="col-sm-9">
                                 <video src="{$info.cover}" controls="controls" style="max-width: 300px;max-height: 300px;"></video>
                                 <!-- <img src="{$info.cover}" style="max-height:100px;max-width:100px;" alt=""> -->
