--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -1026,7 +1026,7 @@ body,html{
         </div>
     </div>
 
-    <a onclick="test()" class="bos3_a" >直接跳過></a>
+    <a onclick="test()" class="bos3_a" >{$text}></a>
     
     {if condition="$type == 2 "}
         <!-- 抽奖时间 -->
@@ -1082,27 +1082,32 @@ function test(){
     console.log(66)
     if(isWeiXin()){
 
-        if("{$type}" == '1'){
-            var url = "/pages/commodity/detalis/give/GetTheGift/GetTheGift?id={$card_id}&order_type={$type}&order_id={$order_id}&pwdstr={$pwdstr}"
-            // 礼盒
+
+        if("{$preview} == 1"){
+            // 预览
+            var url = "/pages/card/makecard/makecard";
             gominiprogram(url);
 
         }else{
+            
+            //不是预览
+            if("{$type}" == '1'){
+                var url = "/pages/commodity/detalis/give/GetTheGift/GetTheGift?id={$card_id}&order_type={$type}&order_id={$order_id}&pwdstr={$pwdstr}"
+                // 礼盒
+                gominiprogram(url);
+            }else{
 
-            $("#mask-kk").show();
-            $(".popup-kk").show();
+                $("#mask-kk").show();
+                $(".popup-kk").show();
 
-           //var url =  '/pages/turntable/turntable?id={$card_id}&order_type={$type}&order_id={$order_id}&pwdstr={$pwdstr}';
-
-            //转盘
-            //开奖时间到了吗
-
-            //gominiprogram(url);
-
+                //var url =  '/pages/turntable/turntable?id={$card_id}&order_type={$type}&order_id={$order_id}&pwdstr={$pwdstr}';
+                //转盘
+                //开奖时间到了吗
+                //gominiprogram(url);
+            }
         }
 
-        
-        
+
         
     }else{
         alert('请在微信打开')
