--- a/application/card/view/index/index.html
+++ b/application/card/view/index/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title> </title>
 </head>
 <style>
 *{
@@ -1083,7 +1083,7 @@ function test(){
     if(isWeiXin()){
 
 
-        if("{$preview} == 1"){
+        if("{$preview}" == '1'){
             // 预览
             var url = "/pages/card/makecard/makecard";
             gominiprogram(url);
