--- a/application/admin/view/order/index.html
+++ b/application/admin/view/order/index.html
@@ -64,7 +64,7 @@
                                     </div>
                                 </div>
 
-                        <div class="col-sm-3">
+                        <!-- <div class="col-sm-3">
                             <div class="form-group">
                                 <label class="control-label">日期</label>
                                 <div class="input-daterange input-group" data-provide="datepicker">
@@ -73,16 +73,16 @@
                                     <input class="form-control input-sm" name="end_time" type="text" value="{$end_time}"/>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         
-                            <div class="col-sm-2">
+                            <!-- <div class="col-sm-2">
                                     <div class="form-group">
                                         <label class="control-label" for="status">　</label>
                                         <div>
                                             <a class="btn btn-primary" href="{:url('order/index', $exportParam)}">导出Excel</a>
                                         </div>
                                     </div>
-                            </div>
+                            </div> -->
                 </form>
            </div>
        </div>
